fix UI too small issue

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ h4 {
     color: white;
     font-family: 'Inter', sans-serif;
     font-weight: 200;
-    font-size: 14px;
+    font-size: 18px;
 }
 
 #system-container {
@@ -29,10 +29,10 @@ h4 {
     margin: 5px;
     padding: 5px;
     border-radius: 10px;
-    min-height: 250px;
-    min-width: 190px;
-    max-height: 250px;
-    max-width: 190px;
+    min-height: 420px;
+    min-width: 300px;
+    max-height: 420px;
+    max-width: 300px;
     /* prevent overflow */
     overflow-y: auto;
 }
@@ -46,9 +46,10 @@ h4 {
     border: 1px solid grey;
     padding: 5px;
     margin: 5px;
-    min-height: 30px;
-    min-width: 190px;
+    min-height: 50px;
+    min-width: 300px;
     border-radius: 10px;
+    font-size: 18px;
 }
 
 #add-normal-order:hover,
@@ -64,7 +65,7 @@ h4 {
     margin: 5px;
     border-radius: 10px;
     max-height: 50px;
-    max-width: 170px;
+    max-width: 300px;
     text-align: center;
 }
 
